# LION

./: .all-contributorsrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  LICENSE.txt  README.md  Readme.md  TODO.md  developers.md  env.yml  env_base.yml  env_proposed.yml  example.py  finetune.py  inference.py  nohup.out  out.txt  padis_profile.prof  padis_profile_cached.prof  padis_profile_cached_old.prof  papers_in_LION.md  pyproject.toml  requirements_extra.txt  setup.py  test.py  test_parameters.py
.github/workflows/: conda_saver.sh  docs.yml  pre-commit.yml  tests.yml
AItomotools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
AItomotools/CTtools/: ct_geometry.py  ct_transforms.py  ct_utils.py
AItomotools/backends/: odl.py
AItomotools/data_loaders/: LIDC_IDRI.py  LUNA16.py  data_loader.py  data_primitives.py  deteCT.py  download_walnuts.py  luna16_dataset.py  playground.py  visualise_LIDC_IDRI.py  walnuts.py
AItomotools/experiments/: ct_experiments.py
AItomotools/metadata_folder/: joint_metadata.json
AItomotools/models/: ACR.py  AItomomodel.py  FBPConvNet.py  ItNet.py  LPD.py  MS_D.py  template.py
AItomotools/pre_processing/: pre_process_lidc_idri.py
AItomotools/utils/: math.py  parameter.py  paths.py  utils.py
CTtools/: ct_geometry.py  ct_utils.py
LION.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LION/CTtools/: ct_geometry.py  ct_transforms.py  ct_utils.py
LION/backends/: odl.py
LION/classical_algorithms/: __init__.py  conjugate_gradient.py  fbp.py  fdk.py  fista.py  sirt.py  spgl1_torch.py  tv_min.py
LION/data_loaders/: LIDC_IDRI.py  README.md  __init__.py  deteCT.py  luna16_dataset.py
LION/exceptions/: exceptions.py
LION/experiments/: ct_2DeteCT_noise_experiments.py  ct_benchmarking_experiments.py  ct_experiments.py  pcm_experiments.py  pcm_experiments_final.py
LION/losses/: PaDIS.py  SURE.py  SUREpgImage.py
LION/metrics/: haarpsi.py  psnr.py  ssim.py
LION/models/: ACR.py  AItomomodel.py  ContinuousFBPConvNet.py  ContinuousLPD.py  FBPConvNet.py  InceptionUnet.py  ItNet.py  LIONmodel.py  LIONmodelSubclasses.py  LPD.py  MS_D.py  README.md  UNet3D.py
LION/operators/: CTProjectionOp.py  DebiasOp.py  Operator.py  PhotocurrentMapOp.py  TomographicProjOp.py  __init__.py  multilevel_sample.py  operator.py  photocurrent_map_op.py  sampling_utils.py  tomographic_proj_op.py  uniform_random_sample.py
LION/optimizers/: ARsolver.py  AdversarialRegularizerSolver.py  Equivariance2InverseSolver.py  EquivariantSolver.py  GaussianDenoiserSolver.py  LIONloss.py  LIONsolver.py  Noise2InverseSolver.py  Noise2Inverse_solver.py  Noise2Inverse_solver2.py  Noisier2Inverse.py  PaDISSolver.py  Proj2ProjSolver.py  SelfSupervisedSolver.py  Sparse2InverseSolver.py  SupervisedSolver.py  __init__.py  noise2inverse.py  supervised_learning.py  weaklysupervised_learning.py
LION/pcm/: __init__.py  config.py  data.py  denoiser.py  experiment.py  plotting.py  reconstruct.py  run_demo.py  run_experiment.py  types.py
LION/pcm_tools/: noise.py
LION/reconstructors/: LIONReconstructor.py  LIONreconstructor.py  PaDIS.py  PnP.py  PnPReconstructor.py  __init__.py  pnp_reconstructors.py  reconstructor.py
LION/utils/: activations.py  config.py  conjugate_gradient.py  metrics.py  multi_model_evaluation.py  normaliser.py  parameter.py  paths.py  pcm_sampling.py  plot_helper.py  scale.py  single_model_evaluation.py  test_model.py  utils.py
classical_algorithms/: __init__.py  conjugate_gradient.py  fista.py  spgl1_torch.py  tv_min.py
conda/: meta.yaml
data_loaders/2deteCT/: download.py  pre_process_2deteCT.py
data_loaders/LIDC_IDRI/: README.md  download_LIDC_IDRI.sh
data_loaders/LUNA16/: data_loader.py
demos/: LUNA16.py  README.md  REAMDE.md  ct_simulation.py  d00_LUNA16.py  d00_parameters.py  d00_train_LPD.py  d01_ct_simulation.py  d02_parameters.py  d03_ct_experiments.py  d03_ct_experiments_minimal.py  d03_train_LPD.py  d04_LION_models.py  luna16.py
demos/notebooks/: to_autograd_usage.ipynb
docs/: Makefile  generate_api_tree.py
docs/source/: architecture.rst  conf.py  contributor_guide.rst  documentation_status.rst  examples.rst  getting_started.rst  index.rst  readthedocs.rst  testing.rst
examples/notebooks/: photocurrent_mapping.ipynb
metrics/: psnr.py
misc/: changelog.md  micromamba_export_environment.yml  pip_freeze_requirements.txt
misc/holly/: micromamba_env_export_dev.yml  micromamba_env_export_no_pip.yml  micromamba_env_export_release.yml  pip_freeze_requirements_dev.txt  pip_freeze_requirements_no_pip.txt  pip_freeze_requirements_release.txt
models/CNNs/: MSDNet.py
models/PnP/: __init__.py
models/diffusion/: __init__.py
models/iterative_unrolled/: LG.py
models/learned_fbp/: DeepFBP.py  DeepFusionBP.py  FusionFBP.py
models/post_processing/: FBPConvNet.py  FBPMSDNet.py  cFBPConvNet.py
operators/: CTProjectionOp.py  CompositeOp.py  DebiasOp.py  Operator.py  PhotocurrentMapOp.py  WalshHadamard2D.py  Wavelet2D.py  _README.rst  __init__.py
optimizers/: AdversarialRegularizerSolver.py  EquivariantSolver.py  GaussianDenoiserSolver.py  LIONsolver.py  PaDISSolver.py  SelfSupervisedSolver.py  Sparse2InverseSolver.py  __init__.py
pytests/: .ruff.toml  helper.py
pytests/classical_algorithms/: test_fista.py  test_spgl1.py
pytests/experiments/: test_ct_experiments.py
pytests/operators/: test_composite_op.py  test_ct_op.py  test_multilevel_sample.py  test_pcm_op.py  test_wavelet.py  test_wht.py
pytests/utils/: test_operator_norm.py
reconstructors/: LIONreconstructor.py  PnP.py
scripts/: README.md  run_tests.py  run_tests.sh
scripts/Tokyo_scripts/: FBPConvnet.py  ItNet.py  LPD.py  noise2inverse.py
scripts/benchmarking/: FBPDnCNN_BeamHardening.py  FBPMSDNet_Limited60.py  FBPUNet_Limited60.py  LG_BeamHardening.py  LPD_BeamHardening.py  Qualitative_Analysis_Figure.py  Qualitative_Analysis_Figure_GT.py  eval_ChP_allExp_benchmark.py  (+23 more)
tests/: __init__.py  conftest.py  test_run_tests.py
utils/: conda_saver.sh  conda_updater.sh  math.py  parameter.py  test_model.py  utils.py
(+838 files in other folders)
